[package]
name = "markdown-codeblocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo", "unicode", "derive"] }
clap-markdown = "0.1.3"
markdown = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_iter = "0.1.1"
serde_json = "1.0.111"
